--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="css/style4.css">
     <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
 
 
@@ -17,7 +17,7 @@
     Time to make popcorn...</h2>
     </div>
     
-   <a href="index.php"> <img class="popcorn" src="media/popcorn.png" width="50%"/></a>
+   <a href="index.php"> <img class="popcorn" src="/css/media/popcorn.png" width="50%"/></a>
   
 </body>
 </html>
