--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
     Time to make popcorn...</h2>
     </div>
     
-   <a href="index.php"> <img class="popcorn" src="/css/media/popcorn.png" width="50%"/></a>
+   <a href="index.php"> <img class="popcorn" src="css/media/popcorn.png" width="50%"/></a>
   
 </body>
 </html>
